<resources>
    <string name="app_name">Spokestack Control Room</string>
    <string name="spokestack_control_room">Spokestack Control Room</string>
    <string name="say_spokestack">Say \"Spokestack\"</string>
    <string name="inactive">Inactive</string>
    <string name="vad">Voice</string>
    <string name="asr">ASR</string>
    <string name="activate_asr">Activate ASR</string>
    <string name="speech_transcript">Transcript</string>
    <string name="update_from_transcript">Update from transcript</string>
    <string name="text_input">NLU/TTS input</string>
    <string name="speak">Speak</string>
    <string name="classify">Classify</string>
    <string name="processing">Processing...</string>
    <string name="active">Active</string>
    <string name="nlu_results">NLU results</string>
    <string name="intent">Intent:</string>
    <string name="slots">Slots:</string>
</resources>
